plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {

    implementation group: 'org.glassfish.jersey.core',
            name: 'jersey-client',
            version: '3.1.10'

    implementation group: 'org.glassfish.jersey.media',
            name: 'jersey-media-json-jackson',
            version: '3.1.10'

    implementation group: 'org.glassfish.jersey.inject',
            name: 'jersey-hk2',
            version: '3.1.10'

    implementation group: 'com.fasterxml.jackson.datatype',
            name: 'jackson-datatype-jsr310',
            version: '2.19.2'

    implementation group: 'jakarta.activation',
            name: 'jakarta.activation-api',
            version: '2.1.3'

    implementation group: 'org.apache.commons',
            name: 'commons-lang3',
            version: '3.18.0'

    implementation group: 'org.apache.commons',
            name: 'commons-csv',
            version: '1.14.1'

    testImplementation group: 'org.junit.jupiter',
            name: 'junit-jupiter-api',
            version: '5.13.4'

    testImplementation group: 'org.junit.jupiter',
            name: 'junit-jupiter-engine',
            version: '5.13.4'

    testImplementation group: 'org.junit.platform', name:
            'junit-platform-launcher',
            version: '1.13.4'

    testImplementation group: 'org.assertj',
            name: 'assertj-core',
            version: '3.27.3'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('runTest', JavaExec) {
    mainClass.set('util.Runner')

    classpath = sourceSets.test.runtimeClasspath
}
